FEATURE-27: Exposed token management api to set and get domain auth token (#29)
* implemented set auth token for domain

* implemented get domain auth token

* performed tests

*Removed domain configuration repository rest api.

--- a/docs/apis/snippets/token-management-documentation/get-auth-token-for-domain/1/http-request.adoc
+++ b/docs/apis/snippets/token-management-documentation/get-auth-token-for-domain/1/http-request.adoc
@@ -1,6 +1,6 @@
 [source,http,options="nowrap"]
 ----
-GET /domainConfigurations/0 HTTP/1.1
+GET /token/domainAuth/1111111111 HTTP/1.1
 domain-auth-token: 2222
 Host: localhost:8080
 
