--- a/docs/apis/snippets/token-management-documentation/set-auth-token-for-domain/1/http-response.adoc
+++ b/docs/apis/snippets/token-management-documentation/set-auth-token-for-domain/1/http-response.adoc
@@ -1,17 +1,11 @@
 [source,http,options="nowrap"]
 ----
-HTTP/1.1 200 OK
+HTTP/1.1 204 No Content
 Pragma: no-cache
 X-XSS-Protection: 1; mode=block
 Expires: 0
 X-Frame-Options: DENY
 X-Content-Type-Options: nosniff
-Content-Length: 39
-Content-Type: application/json;charset=UTF-8
 Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 
-{
-  "id" : "1",
-  "value" : "1234"
-}
 ----
