--- a/docs/apis/snippets/token-management-documentation/set-auth-token-for-domain/1/request-body.adoc
+++ b/docs/apis/snippets/token-management-documentation/set-auth-token-for-domain/1/request-body.adoc
@@ -1,7 +1,4 @@
 [source,options="nowrap"]
 ----
-{
-  "tokenId" : "1",
-  "domainId" : "1111111111"
-}
+{"tokenId":"1","domainId":"1111111111"}
 ----
