--- a/docs/apis/snippets/token-management-documentation/set-auth-token-for-domain/1/httpie-request.adoc
+++ b/docs/apis/snippets/token-management-documentation/set-auth-token-for-domain/1/httpie-request.adoc
@@ -1,9 +1,6 @@
 [source,bash]
 ----
-$ echo '{
-  "tokenId" : "1",
-  "domainId" : "1111111111"
-}' | http POST 'http://localhost:8080/token/setDomainAuthToken' \
+$ echo '{"tokenId":"1","domainId":"1111111111"}' | http POST 'http://localhost:8080/token/setDomainAuthToken' \
     'domain-auth-token:2222' \
     'Content-Type:application/json'
 ----
