--- a/docs/apis/snippets/registration-profile-documentation/update-registration-profile-by-id/1/curl-request.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/update-registration-profile-by-id/1/curl-request.adoc
@@ -2,7 +2,5 @@
 ----
 $ curl 'http://localhost:8080/repo/registrationProfiles/1' -i -X PATCH \
     -H 'domain-auth-token: 2222' \
-    -d '{
-  "defaultRedirectUrl" : "http://modified.app.com"
-}'
+    -d '{"defaultRedirectUrl":"http://modified.app.com"}'
 ----
