--- a/docs/apis/snippets/registration-profile-documentation/update-registration-profile-by-id/1/httpie-request.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/update-registration-profile-by-id/1/httpie-request.adoc
@@ -1,7 +1,5 @@
 [source,bash]
 ----
-$ echo '{
-  "defaultRedirectUrl" : "http://modified.app.com"
-}' | http PATCH 'http://localhost:8080/repo/registrationProfiles/1' \
+$ echo '{"defaultRedirectUrl":"http://modified.app.com"}' | http PATCH 'http://localhost:8080/repo/registrationProfiles/1' \
     'domain-auth-token:2222'
 ----
