--- a/docs/apis/snippets/registration-profile-documentation/update-registration-profile-by-id/1/request-body.adoc
+++ b/docs/apis/snippets/registration-profile-documentation/update-registration-profile-by-id/1/request-body.adoc
@@ -1,6 +1,4 @@
 [source,options="nowrap"]
 ----
-{
-  "defaultRedirectUrl" : "http://modified.app.com"
-}
+{"defaultRedirectUrl":"http://modified.app.com"}
 ----
