--- a/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/httpie-request.adoc
@@ -1,13 +1,6 @@
 [source,bash]
 ----
-$ echo '{
-  "query" : "(country equals 'Nigeria')",
-  "updates" : [ {
-    "operation" : "SET",
-    "property" : "color",
-    "value" : "green"
-  } ]
-}' | http PATCH 'http://localhost:8080/domains/test-app/users' \
+$ echo '{"query":"(country equals 'Nigeria')","updates":[{"operation":"SET","property":"color","value":"green"}]}' | http PATCH 'http://localhost:8080/domains/test-app/users' \
     'Content-Type:application/json' \
     'domain-auth-token:1234'
 ----
