--- a/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/request-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/request-body.adoc
@@ -1,11 +1,4 @@
 [source,options="nowrap"]
 ----
-{
-  "query" : "(country equals 'Nigeria')",
-  "updates" : [ {
-    "operation" : "SET",
-    "property" : "color",
-    "value" : "green"
-  } ]
-}
+{"query":"(country equals 'Nigeria')","updates":[{"operation":"SET","property":"color","value":"green"}]}
 ----
