--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/http-response.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/http-response.adoc
@@ -1,22 +1,14 @@
 [source,http,options="nowrap"]
 ----
 HTTP/1.1 200 OK
-Content-Type: application/json;charset=UTF-8
-X-Content-Type-Options: nosniff
-X-XSS-Protection: 1; mode=block
-Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
+X-XSS-Protection: 1; mode=block
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 207
+X-Content-Type-Options: nosniff
+Content-Length: 159
+Content-Type: application/json;charset=UTF-8
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 
-{
-  "id" : "123453432",
-  "username" : "test-user",
-  "password" : "my-password",
-  "roles" : [ "admin-role" ],
-  "authorities" : [ "admin" ],
-  "favourite-colour" : "blue",
-  "country" : "Nigeria"
-}
+{"id":"123453432","username":"test-user","password":"my-password","roles":["admin-role"],"authorities":["admin"],"favourite-colour":"blue","country":"Nigeria"}
 ----
