--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/response-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/response-body.adoc
@@ -1,12 +1,4 @@
 [source,options="nowrap"]
 ----
-{
-  "id" : "123453432",
-  "username" : "test-user",
-  "password" : "my-password",
-  "roles" : [ "admin-role" ],
-  "authorities" : [ "admin" ],
-  "favourite-colour" : "blue",
-  "country" : "Nigeria"
-}
+{"id":"123453432","username":"test-user","password":"my-password","roles":["admin-role"],"authorities":["admin"],"favourite-colour":"blue","country":"Nigeria"}
 ----
