--- a/docs/apis/snippets/user-management-documentation/querying-users/1/response-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/querying-users/1/response-body.adoc
@@ -1,41 +1,4 @@
 [source,options="nowrap"]
 ----
-{
-  "content" : [ {
-    "id" : "123453432",
-    "username" : "test-user0",
-    "password" : "my-password0",
-    "roles" : [ "admin-role" ],
-    "authorities" : [ "admin" ],
-    "country" : "Nigeria",
-    "favourite-color" : "blue"
-  }, {
-    "id" : "123453432",
-    "username" : "test-user1",
-    "password" : "my-password1",
-    "roles" : [ "admin-role" ],
-    "authorities" : [ "admin" ],
-    "country" : "Nigeria",
-    "favourite-color" : "blue"
-  }, {
-    "id" : "123453432",
-    "username" : "test-user2",
-    "password" : "my-password2",
-    "roles" : [ "admin-role" ],
-    "authorities" : [ "admin" ],
-    "country" : "Nigeria",
-    "favourite-color" : "blue"
-  } ],
-  "totalElements" : 3,
-  "last" : true,
-  "totalPages" : 1,
-  "size" : 10,
-  "number" : 0,
-  "sort" : {
-    "sorted" : false,
-    "unsorted" : true
-  },
-  "numberOfElements" : 3,
-  "first" : true
-}
+{"content":[{"id":"123453432","username":"test-user0","password":"my-password0","roles":["admin-role"],"authorities":["admin"],"country":"Nigeria","favourite-color":"blue"},{"id":"123453432","username":"test-user1","password":"my-password1","roles":["admin-role"],"authorities":["admin"],"country":"Nigeria","favourite-color":"blue"},{"id":"123453432","username":"test-user2","password":"my-password2","roles":["admin-role"],"authorities":["admin"],"country":"Nigeria","favourite-color":"blue"}],"totalElements":3,"last":true,"totalPages":1,"size":10,"number":0,"numberOfElements":3,"sort":{"sorted":false,"unsorted":true,"empty":true},"first":true,"empty":false}
 ----
