--- a/docs/apis/snippets/user-management-documentation/updating-user-properties/1/request-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-user-properties/1/request-body.adoc
@@ -1,12 +1,4 @@
 [source,options="nowrap"]
 ----
-{
-  "id" : "123453432",
-  "username" : "changed-username",
-  "password" : "changed-password",
-  "roles" : [ "admin-role" ],
-  "authorities" : [ "admin" ],
-  "favourite-colour" : "blue",
-  "country" : "Nigeria"
-}
+{"id":"123453432","username":"changed-username","password":"changed-password","roles":["admin-role"],"authorities":["admin"],"favourite-colour":"blue","country":"Nigeria"}
 ----
