--- a/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/http-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/http-request.adoc
@@ -1,17 +1,10 @@
 [source,http,options="nowrap"]
 ----
 PATCH /domains/test-app/users HTTP/1.1
+Content-Length: 105
 Content-Type: application/json
 domain-auth-token: 1234
 Host: localhost:8080
-Content-Length: 149
 
-{
-  "query" : "(country equals 'Nigeria')",
-  "updates" : [ {
-    "operation" : "SET",
-    "property" : "color",
-    "value" : "green"
-  } ]
-}
+{"query":"(country equals 'Nigeria')","updates":[{"operation":"SET","property":"color","value":"green"}]}
 ----
