upgraded spring version to 2.3.0 and jdk version to jdk 14

--- a/docs/apis/snippets/domain-management-documentation/get-a-domain-by-id/1/http-response.adoc
+++ b/docs/apis/snippets/domain-management-documentation/get-a-domain-by-id/1/http-response.adoc
@@ -1,7 +1,10 @@
 [source,http,options="nowrap"]
 ----
 HTTP/1.1 200 OK
-Content-Type: application/hal+json;charset=UTF-8
+Vary: Origin
+Vary: Access-Control-Request-Method
+Vary: Access-Control-Request-Headers
+Content-Type: application/hal+json
 X-Content-Type-Options: nosniff
 X-XSS-Protection: 1; mode=block
 Cache-Control: no-cache, no-store, max-age=0, must-revalidate
