--- a/docs/apis/snippets/field-types-documentation/get-all-field-types/1/response-body.adoc
+++ b/docs/apis/snippets/field-types-documentation/get-all-field-types/1/response-body.adoc
@@ -26,8 +26,7 @@
   },
   "_links" : {
     "self" : {
-      "href" : "http://localhost:8080/repo/fieldTypes{?page,size,sort}",
-      "templated" : true
+      "href" : "http://localhost:8080/repo/fieldTypes"
     },
     "profile" : {
       "href" : "http://localhost:8080/repo/profile/fieldTypes"
