--- a/docs/apis/snippets/authentication-documentation/authentication/1/http-response.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/http-response.adoc
@@ -1,16 +1,14 @@
 [source,http,options="nowrap"]
 ----
 HTTP/1.1 200 OK
-Content-Type: application/json;charset=UTF-8
+Content-Type: application/json
 X-Content-Type-Options: nosniff
 X-XSS-Protection: 1; mode=block
 Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 34
+Content-Length: 26
 
-{
-  "status" : "AUTHENTICATED"
-}
+{"status":"AUTHENTICATED"}
 ----
