--- a/docs/apis/snippets/domain-management-documentation/create-a-domain/1/http-response.adoc
+++ b/docs/apis/snippets/domain-management-documentation/create-a-domain/1/http-response.adoc
@@ -1,6 +1,9 @@
 [source,http,options="nowrap"]
 ----
 HTTP/1.1 201 Created
+Vary: Origin
+Vary: Access-Control-Request-Method
+Vary: Access-Control-Request-Headers
 Location: http://localhost:8080/appDomains/00111111
 X-Content-Type-Options: nosniff
 X-XSS-Protection: 1; mode=block
