--- a/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/response-body.adoc
+++ b/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/response-body.adoc
@@ -23,31 +23,20 @@
         }
       }
     }, {
-      "name" : "test",
+      "name" : "test-domain",
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/appDomains/test-app"
         },
         "appDomain" : {
           "href" : "http://localhost:8080/appDomains/test-app"
-        }
-      }
-    }, {
-      "name" : "Test domain For Config",
-      "_links" : {
-        "self" : {
-          "href" : "http://localhost:8080/appDomains/1111111111"
-        },
-        "appDomain" : {
-          "href" : "http://localhost:8080/appDomains/1111111111"
         }
       }
     } ]
   },
   "_links" : {
     "self" : {
-      "href" : "http://localhost:8080/appDomains{?page,size,sort}",
-      "templated" : true
+      "href" : "http://localhost:8080/appDomains"
     },
     "profile" : {
       "href" : "http://localhost:8080/profile/appDomains"
@@ -55,7 +44,7 @@
   },
   "page" : {
     "size" : 20,
-    "totalElements" : 4,
+    "totalElements" : 3,
     "totalPages" : 1,
     "number" : 0
   }
