--- a/docs/apis/snippets/fields-documentation/create-fields/1/http-response.adoc
+++ b/docs/apis/snippets/fields-documentation/create-fields/1/http-response.adoc
@@ -1,12 +1,15 @@
 [source,http,options="nowrap"]
 ----
 HTTP/1.1 201 Created
-Pragma: no-cache
+Vary: Origin
+Vary: Access-Control-Request-Method
+Vary: Access-Control-Request-Headers
+Location: http://localhost:8080/repo/fields/1
+X-Content-Type-Options: nosniff
 X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-X-Content-Type-Options: nosniff
-Location: http://localhost:8080/repo/fields/1
-Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 
 ----
