--- a/docs/apis/snippets/fields-documentation/get-field-by-id/1/http-response.adoc
+++ b/docs/apis/snippets/fields-documentation/get-field-by-id/1/http-response.adoc
@@ -1,14 +1,17 @@
 [source,http,options="nowrap"]
 ----
 HTTP/1.1 200 OK
-Pragma: no-cache
+Vary: Origin
+Vary: Access-Control-Request-Method
+Vary: Access-Control-Request-Headers
+Content-Type: application/hal+json
+X-Content-Type-Options: nosniff
 X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-X-Content-Type-Options: nosniff
-Content-Type: application/hal+json;charset=UTF-8
 Content-Length: 414
-Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 
 {
   "domainId" : "1",
