--- a/docs/apis/snippets/token-management-documentation/get-auth-token-for-domain/1/http-response.adoc
+++ b/docs/apis/snippets/token-management-documentation/get-auth-token-for-domain/1/http-response.adoc
@@ -1,14 +1,14 @@
 [source,http,options="nowrap"]
 ----
 HTTP/1.1 200 OK
-Pragma: no-cache
-Content-Length: 53
+Content-Type: application/json
+X-Content-Type-Options: nosniff
 X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-X-Content-Type-Options: nosniff
-Content-Type: application/json;charset=UTF-8
-Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Content-Length: 53
 
 {
   "tokenId" : "1",
