removed heroku deploy

--- a/docs/apis/snippets/scope-documentation/create-new-scope/1/request-body.adoc
+++ b/docs/apis/snippets/scope-documentation/create-new-scope/1/request-body.adoc
@@ -4,6 +4,7 @@
   "name" : "Email Scope",
   "code" : "test.mail",
   "description" : "Email Contacts",
-  "domainId" : "1"
+  "domainId" : "1",
+  "authorities" : [ "view_users" ]
 }
 ----
