--- a/docs/apis/snippets/scope-documentation/create-new-scope/1/request-fields.adoc
+++ b/docs/apis/snippets/scope-documentation/create-new-scope/1/request-fields.adoc
@@ -13,6 +13,10 @@
 |`+String+`
 |The scopes identification code
 
+|`+authorities+`
+|`+Array+`
+|List of authorities and roles associated with this scope
+
 |`+description+`
 |`+String+`
 |The scopes description
